# AndroidJnitest

./: .clang-format  CMakeLists.txt  README.md  android_build.sh  verify_callback.cpp  verify_callback.h  verify_class.cpp  verify_test.cpp
AndroidProject/VerifyTest/: settings.gradle
AndroidProject/VerifyTest/app/: build.gradle
AndroidProject/VerifyTest/app/src/androidTest/java/com/example/verifytest/: ExampleInstrumentedTest.java
AndroidProject/VerifyTest/app/src/main/: AndroidManifest.xml
AndroidProject/VerifyTest/app/src/main/java/com/example/verifytest/: MainActivity.java  Verify.java
AndroidProject/VerifyTest/app/src/main/res/values/: strings.xml
AndroidProject/VerifyTest/app/src/test/java/com/example/verifytest/: ExampleUnitTest.java
AndroidProject/VerifyTest/gradle/wrapper/: gradle-wrapper.properties
AndroidProject/VerifyTest/verify/: CMakeLists.txt  build.gradle
AndroidProject/VerifyTest/verify/src/androidTest/java/com/example/verify/: ExampleInstrumentedTest.java
AndroidProject/VerifyTest/verify/src/main/: AndroidManifest.xml
AndroidProject/VerifyTest/verify/src/main/cpp/: jni_helper.cpp  jni_helper.h  verify_callback_jni.cpp  verify_callback_jni.h  verify_class_jni.cpp  verify_class_jni.h  verify_test_jni.cpp  verify_test_jni.h
AndroidProject/VerifyTest/verify/src/main/cpp/include/verify/: verify_class.h  verify_test.h
AndroidProject/VerifyTest/verify/src/main/java/com/example/verify/: TransmitterVerifyListener.java  VerifyClass.java  (+2 more)
AndroidProject/VerifyTest/verify/src/main/res/values/: strings.xml
example/: CMakeLists.txt  main.cpp
(+1 files in other folders)
